--- a/axis.html
+++ b/axis.html
@@ -21,27 +21,27 @@
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">GameMax</div>
+                    <div class="pricing-title">Booster Video</div>
                     <div class="pricing-amount">
                     </div>
                     <div class="pricing-details">
                         <ul>
                             <li>SSH 30 DAYS</li>
-                            <li>Http Injector versi terbaru</li>
+                            <li>Kpn Tunnel Official</li>
                             <li>Suport root/no root</li>
                             <li>Speed up 7MB</li>
-                            <li>Server singapore sshstores</li>
+                            <li>Server singapore</li>
                             <li>Fast Connect</li>
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">Download</a></div>
+                    <div class="pricing-button"><a href="https://download1525.mediafire.com/vn10416mdezg/bg0x0kz04zt9tq9/Booster+Video.ktc" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Maxstrem</div>
+                    <div class="pricing-title">Booster Sosmed</div>
                     <div class="pricing-amount">
                     </div>
                     <div class="pricing-details">
@@ -55,13 +55,13 @@
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1479.mediafire.com/fpq3pixf78dg/70s6nociiu2vcl2/Maxstrem.ehi" class="blue-button">Download</a></div>
+                    <div class="pricing-button"><a href="#" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Ilmu Pedia</div>
+                    <div class="pricing-title">Hura Hura</div>
                     <div class="pricing-amount">
                     </div>
                     <div class="pricing-details">
@@ -75,7 +75,7 @@
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1518.mediafire.com/8gqeiv1ouwgg/ibqkoaglxpm4f2k/Ilmu+pedia.ehi" class="blue-button">Download</a></div>
+                    <div class="pricing-button"><a href="#" class="blue-button">Download</a></div>
                 </div>
             </div>
         </div>
