--- a/xl.html
+++ b/xl.html
@@ -21,7 +21,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">GameMax</div>
+                    <div class="pricing-title">XL Turbo</div>
                     <div class="pricing-amount">
                     </div>
                     <div class="pricing-details">
@@ -35,13 +35,13 @@
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">Download</a></div>
+                    <div class="pricing-button"><a href="#" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Maxstrem</div>
+                    <div class="pricing-title">Xl Xtra Rezeki</div>
                     <div class="pricing-amount">
                     </div>
                     <div class="pricing-details">
@@ -55,13 +55,13 @@
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1479.mediafire.com/fpq3pixf78dg/70s6nociiu2vcl2/Maxstrem.ehi" class="blue-button">Download</a></div>
+                    <div class="pricing-button"><a href="#" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-4">
                 <div class="pricing-box blue-after">
                     <div class="pricing-icon"></div>
-                    <div class="pricing-title">Ilmu Pedia</div>
+                    <div class="pricing-title">Xl Line</div>
                     <div class="pricing-amount">
                     </div>
                     <div class="pricing-details">
@@ -75,7 +75,7 @@
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1518.mediafire.com/8gqeiv1ouwgg/ibqkoaglxpm4f2k/Ilmu+pedia.ehi" class="blue-button">Download</a></div>
+                    <div class="pricing-button"><a href="#" class="blue-button">Download</a></div>
                 </div>
             </div>
         </div>
