--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="row-title">TUTORIAL INJECTION VPN</div>
-             <div class="pricing-button"><a href="tutorial.html" class="blue-button">Select</a></div>
+             <div class="pricing-button"><a href="link.html" class="blue-button">Select</a></div>
             </div>
         </div>
         </div>
