--- a/index.html
+++ b/index.html
@@ -3,136 +3,43 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
- 
-<title>PANELCONFIG</title>
+<title>Hostio</title>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
- <link rel="shortcut icon" href="images/favicon.png"/>
 </head>
- 
-<body>
-<div id="top-content" class="container-fluid">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <div class="big-title">PANELCONFIG</div>
-                <div class="sub-title">Tempat berbagi tutorial seputar internet internet gratis.</div>
-      
-                <div class="animation">
-                    <img src="images/laptop.png" alt="laptop" />
-                    <ul class="icons-list">
-                        <li><a href="https://m.facebook.com/ironimouse"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-                        <li><a href="#"><i class="fa fa-share-alt"></i></a></li>
-                        <li><a href="#"><i class="fa fa-signal"></i></a></li>
-                    </ul>
-                    <canvas id="hand-animation"></canvas>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="features" class="container-fluid">
+
+<body class="full-page">
+
+<div class="container-fluid">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="row-title">Peringatan !!!</div>
-                <div class="row-subtitle">Gunakan trik hanya untuk hal hal positif .<br />
-                    Dilarang untuk menggunakan trik untuk dijual belikan.
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="feature-box">
-                    <div class="box-bg"></div>
-                    <div class="feature-icon"><i class="hsto hsto-cloud-computing"></i></div>
-                    <div class="feature-title">SSH SERVER PREMIUM</div>
-                    <div class="feature-details">Config atau trik yang digunakan menggunakan server fresh dan premium.</div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="feature-box active">
-                    <div class="box-bg"></div>
-                    <div class="feature-icon"><i class="hsto hsto-mouse"></i></div>
-                    <div class="feature-title">VPN SAFETY</div>
-                    <div class="feature-details">Untuk berinternet menggunakan vpn aman dan tanpa adanya pencurian data .</div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="feature-box">
-                    <div class="box-bg"></div>
-                    <div class="feature-icon"><i class="hsto hsto-worldwide"></i></div>
-                    <div class="feature-title">TUTORIAL MUDAH</div>
-                    <div class="feature-details">Untuk tutorial kami berusaha memberi pembelajaran yang gampang di aplikasikan oleh orang awam :).</div>
+                <div class="signin-signup-form">
+                    <a href="index.html"><img class="logo" src="./images/logo-white.png" alt="Hostio" /></a>
+                    <div class="form-title">Login to your account</div>
+                    <form id="signinform">
+                        <div class="form-text">
+                            <input type="text" name="username" placeholder="Username" required>
+                        </div>
+                        <div class="form-text">
+                            <input type="password" name="password" placeholder="Password" required>
+                        </div>
+                        <div class="form-button">
+                            <input id="submit" type="submit" value="Login">
+                        </div>
+                    </form>
+                    <div class="links-holder"><a href="register.html">Create account</a> or <a href="index.html">Back to Homepage</a></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div id="pricing" class="container-fluid">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="row-title">PILIH PROVIDER</div>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-4">
-                <div class="pricing-box purple-after">
-                    <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
-                    <div class="pricing-title">TELKOMSEL</div>
-                    <div class="pricing-button"><a href="telkomsel.html" class="blue-button">Select Config</a></div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-4">
-                <div class="pricing-box purple-after">
-                    <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
-                    <div class="pricing-title">AXIS</div>
-                    <div class="pricing-button"><a href="axis.html" class="blue-button">Select Config</a></div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-4">
-                <div class="pricing-box purple-after">
-                    <div class="pricing-icon blue-color"><i class="hsto hsto-computer"></i></div>
-                    <div class="pricing-title">XL AXIATA</div>
-                    <div class="pricing-button"><a href="xl.html" class="blue-button">Select Config</a></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="more-info" class="container-fluid">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="row-title">TUTORIAL INJECTION VPN</div>
-             <div class="pricing-button"><a href="link.html" class="blue-button">Select</a></div>
-            </div>
-        </div>
-        </div>
-    </div>
-</div>
- 
-<div id="testimonials" class="container-fluid">
-    <div class="container">
- <div class="row">
-            <div class="col-sm-6 col-md-4">
-                <div class="testimonial-box">
-                    <div class="testimonial-image"><img src="images/panelconfig.gif" alt="person" /></div>
-                    <div class="testimonial-details">Jangan merasa tinggi karna diatas langit masih ada langit. Dan dibawah langit masih ada janda yang berdiri menunggu kejantanan anda :v</div>
-                    <div class="testimonial-info"><span class="name">MhmdSairi</span> - Owner @ PanelConfig</div>
-                </div>
-            </div>
-         <script src="js/jquery.min.js"></script>
+    
+<script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/createjs.min.js"></script>
-<script src="js/handanimation.js"></script>
-<script src="js/animation-start.js"></script>
+
 <script src="js/main.js"></script>
 </body>
 </html>
- 
