--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <input id="submit" type="submit" value="Login">
                         </div>
                     </form>
-                    <div class="links-holder"><a href="register.html">Create account</a> or <a href="index.html">Back to Homepage</a></div>
+                    <div class="links-holder"><a href="register.html">Create account</a> or <a href="#">Back to Homepage</a></div>
                 </div>
             </div>
         </div>
