--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="row-title">TUTORIAL INJECTION VPN</div>
-             <div class="pricing-button"><a href="link.html" class="blue-button">Select</a></div>
+                <div class="row-title">LOGIN ACCOUNTS</div>
+             <div class="pricing-button"><a href="login.html" class="blue-button">Select</a></div>
             </div>
         </div>
         </div>
