--- a/telkomsel.html
+++ b/telkomsel.html
@@ -30,12 +30,12 @@
                             <li>Http Injector versi terbaru</li>
                             <li>Suport root/no root</li>
                             <li>Speed up 7MB</li>
-                            <li>Server singapore sshstores</li>
+                            <li>ssh buat sendiri</li>
                             <li>Fast Connect</li>
                             <li>Dilarang membuka situs biru</li>
                         </ul>
                     </div>
-                    <div class="pricing-button"><a href="https://download1324.mediafire.com/0zbagf0oneqg/9a3ow7t2elk67k4/GameMax.ehi" class="blue-button">Download</a></div>
+                    <div class="pricing-button"><a href="https://download1322.mediafire.com/izndqk4rgqqg/jb03dgmfxywo115/GameMaxs.ehi" class="blue-button">Download</a></div>
                 </div>
             </div>
             <div class="col-sm-6 col-md-4">
