--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="col-sm-6 col-md-4">
                 <div class="testimonial-box">
                     <div class="testimonial-image"><img src="images/panelconfig.gif" alt="person" /></div>
-                    <div class="testimonial-details">Jangan merasa tinggi karna diatas langit masih ada langit. Dan dibawah langit masih ada janda yang berdiri menunggu kejantanan anda :v</div>
+                    <div class="testimonial-details">Lakukan Apa yang Membuatmu Bahagia dan tetap lakukanlah walau itu tidak berguna bagi orang lain :)</div>
                     <div class="testimonial-info"><span class="name">MhmdSairi</span> - Owner @ PanelConfig</div>
                 </div>
             </div>
